# Freelancer_crawler

./: .dockerignore  .gitignore  CLAUDE.md  DEPLOY_VPS.txt  DEPLOY_VPS_MANUAL.txt  Dockerfile  README.md  backup.dump  backup.sql  backup_20260610_234250.sql  docker-compose.prod.yaml  docker-compose.yaml  pyproject.toml  test_update.py  vaga_embeddings.pkl
.github/workflows/: ci.yml  deploy.yml  release.yml
frontend/vagas-app/: .dockerignore  Dockerfile  index.html  nginx.conf  package-lock.json  package.json
frontend/vagas-app/src/: App.tsx  Form.tsx  Form_Skill.tsx  index.css  main.tsx  router.tsx
frontend/vagas-app/src/pages/home/: index.tsx
frontend/vagas-app/src/pages/login/: index.tsx
frontend/vagas-app/src/pages/register/: index.tsx
frontend/vagas-app/src/pages/register-skill/: index.tsx
frontend/vagas-app/src/pages/update-skill/: index.tsx
frontend/vagas-app/src/pages/vagas/: index.tsx
src/freelancer_crawler/: ]  backup.sql  bot.py  connect.py  crawler.py  extract.py  main.py  models.py  requisicao.py  resq.py  security.py  vaga_embeddings.pkl
tests/: conftest.py  test_api.py  test_security.py  test_um.py
