[project]
name = "freenlace-crawler"
version = "1"
description = ""
authors = [
    {name = "gabriel",email = "you@example.com"}
]
readme = "README.md"
requires-python =  ">=3.13,<3.15"
dependencies = [
    "playwright (>=1.58.0,<2.0.0)",
    "beautifulsoup4 (>=4.14.3,<5.0.0)",
    "sqlalchemy (>=2.0.49,<3.0.0)",
    "fastapi[standard] (>=0.136.0,<0.137.0)",
    "python-telegram-bot (>=22.7,<23.0)",
    "requests (>=2.33.1,<3.0.0)",
    "pyjwt (>=2.12.1,<3.0.0)",
    "pwdlib[argon2] (>=0.3.0,<0.4.0)",
    "sentence-transformers (>=5.4.1,<6.0.0)",
    "scikit-learn (>=1.8.0,<2.0.0)",
    "psycopg (>=3.3.4,<4.0.0)",
    "python-dotenv (>=1.0.0,<2.0.0)",
    "torch (>=2.0.0,<3.0.0); extra == 'cpu' or extra == 'gpu'"
]

[project.optional-dependencies]
dev = [
    "pytest (>=9.0.3,<10.0.0)",
    "ruff (>=0.15.12,<0.16.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.pytest.ini_options]
addopts = "--ignore=postgres-data"
