[tool.poetry]
name = "freelancer-crawler"
version = "1.0.0"
description = "A full-stack job matching platform for freelance listings"
authors = ["Gabriel Bueno Sathler <gabrielbuenosathler@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
playwright = "^1.58.0"
beautifulsoup4 = "^4.14.3"
sqlalchemy = "^2.0.49"
fastapi = { version = "^0.136.0", extras = ["standard"] }
python-telegram-bot = "^22.7"
requests = "^2.33.1"
pyjwt = "^2.12.1"
pwdlib = { version = "^0.3.0", extras = ["argon2"] }
sentence-transformers = "^5.4.1"
scikit-learn = "^1.8.0"
psycopg = { version = "^3.3.4", extras = ["binary"] }
python-dotenv = "^1.0.0"
torch = { version = "^2.0.0", markers = "sys_platform != 'darwin'" }

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.3"
ruff = "^0.15.12"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = "-v --strict-markers"
testpaths = ["tests"]
pythonpath = ["src/freelancer_crawler"]
markers = [
    "network: tests that require external network access (deselect with -m 'not network')",
]

[tool.ruff]
target-version = "py313"
